Version: $Id$ $Name$

dohpaZ (12/?/03)
---------------------
+ Updated version to 5.0.0.4
+ More updates to work with 12/19/03 EQLive 
+ Fix border cases in SpellShell that would cause ShowEQ to crash.
+ Added a workaround for ISO/ANSI/IEC C++ and C conformance regressions
  in gcc 3.3.
+ Minor fix in h2info.pl that fixes the comment and operation with certain
  versions of perl.
+ Made packet handling more robust in the face of corrupt and non-EQ packets
  that are captured.
+ Support display of a zone's safepoint from the zone packet on the map.
+ Added NetStream classes for handling network byte order data streams.
+ Cleaned up the textual dump of guild names
+ Added GuildShell to track the list of guild members.
+ Added support for LoY guild information capture/display.
+ Integrated patch #861374 "Fix-three options aren't saved".
+ Integrated patch #864328 "Nedaria's Landing Map".
+ Integrated patch #864329 "Map: JaggedPine touchups".
+ Integrated patch #868227 "Restore light sources".

dohpaZ (12/19/03)
---------------------
+ Updated version to 5.0.0.3
+ Updated to work with 12/19/03 EQLive 
+ Fixed spell related crashes when using either an outdated spells_us.txt
  or not using one.
+ Fixed uic configure problem caused by people running ./configure while su'd
  to root.

dohpaZ (12/13/03)
---------------------
+ Updated version to 5.0.0.2
+ Updated the default ArqSeqGiveUp to 512 since with the current encryption
  scheme a single missed packet can have greater ramifications then under the
  previous one.
+ Removed some extraneous command line options.
+ Removed some more cruft from ShowEQParams.
+ Minor tweak to map spawn color selection to deal with properly with traps,
  event-triggers, and timers.

+ Many SpellShell improvements
  + Made it delete expired spells faster (after up to 6 seconds of 0, 
    rather then 20).  
  + Modified it to delete spells from the list for spawns that are killed.  